add static and apply

--- a/templates/result.html
+++ b/templates/result.html
@@ -25,6 +25,8 @@
     </form>
     <div>
         <p>
+            <img src="{{ image }}"/>
+            <br></br>
             {{label_probs}}
             <br></br>
             {{title_color}}
