--- a/templates/home.html
+++ b/templates/home.html
@@ -39,13 +39,13 @@
 					<tr>
 						<td rowspan="2">
 							<div id="signup-form">
-								<input type="text" name="title" id="title" placeholder="Title" />
+								<input type="text" name="title" id="title" placeholder="Title" value="{{title}}"/>
 							</div>
 							<div>
 							<br>
 							</div>
-							<div id="signup-form-body">
-								<input type="text" name="body" id="body" placeholder="Body" />
+							<div id="signup-form">
+								<textarea name="body" id="body" placeholder="Body">{{body}}</textarea>
 							</div>
 							<div>
 							<br>
@@ -65,9 +65,33 @@
 										<span style='background-color: {{ body_color[i] }};'>{{body_token[i]}} </span>
 									{% endfor %}
 								</p><br>
+
+								<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js">
+									$(document).ready(function(){
+										 chart = new Chart(document.getElementById("doughnut-chart"), {
+											type: 'doughnut',
+											data: {
+											  labels: ["Real News", "Fake News"],
+											  datasets: [
+												{
+												  label: "",
+												  backgroundColor: ["#8e5ea2", "#e8c3b9"],
+												  data: {{label_probs|safe}},
+												}
+											  ]
+											},
+											options: {
+											  title: {
+												display: true,
+												text: 'Predicted world population (millions) in 2050'
+											  }
+											}
+									});
+								</script>
+								<canvas id="doughnut-chart" width="250" height="250"></canvas>
 							</div>
 						</td>
-				</tr>
+					</tr>
 				</table>
 			</form>
 
@@ -102,7 +126,8 @@
 			</footer>
 
 		<!-- Scripts -->
-		<script src="{{ url_for('static', filename='js/main.js') }}">document.write("This is written from JavaScript");</script>
+		<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+<!--		<script src="{{ url_for('static', filename='js/doughnut-chart.js') }}"></script>-->
 
 	</body>
 	
