--- a/templates/contact.html
+++ b/templates/contact.html
@@ -91,7 +91,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/other.css') }}" />
 	</head>
 
 	<body class="is-preload">
@@ -100,8 +100,8 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="about">About</a></li>
 				<li class="break"><a href="fakenews">Fake News</a></li>
+				<li><a href="about">About</a></li>
 				<li><a href="contact">Contact Us</a></li>
 
 			</ul>
