--- a/templates/about.html
+++ b/templates/about.html
@@ -13,60 +13,61 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/other.css') }}" />
 	</head>
 
-	<body class="is-preload">
+	<div style="padding: 0px 400px 0px 400px;">
+		<body class="is-preload">
 
-		<!-- Nav -->
-		<nav id="nav">
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li class="break"><a href="fakenews">Fake News</a></li>
-				<li><a href="about">About</a></li>
-				<li><a href="contact">Contact Us</a></li>
-			</ul>
-		</nav>
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li><a href="/">Home</a></li>
+					<li class="break"><a href="fakenews">Fake News</a></li>
+					<li><a href="about">About</a></li>
+					<li><a href="contact">Contact Us</a></li>
+				</ul>
+			</nav>
 
-		<!-- Header -->
-			<header id="header">
-				<h1 id="h1_about">About Our Detection Model</h1>
-<!--				<br>-->
-<!--				<br>-->
-<!--				<br>-->
-<!--				<br>-->
-				<h3>딥러닝 접근 방식</h3>
-				<br>
-				<p>우리 팀에서 사용한 모델은 한국어 워드 임베딩에 최적화된 fasttext 100차원 모델을 이용하여 임베딩 되었습니다.</p>
-				<p>이 임베딩 벡터를 이용하여 제목과 본문 텍스트에 양방향 LSTM을 적용하여 효과적인 학습을 진행합니다.</p>
-				<p>결과로는 agree / disagree 두 가지 label로 나뉘어 출력됩니다. 각 파라미터는 여러번 실험 후 제일 성능이 좋은 파라미터로 선택되었습니다.</p>
-				<div >
-					<img src="{{ url_for('static', filename='images/model.png') }}" alt="My Image">
-				</div>
+			<!-- Header -->
+				<header id="header">
+					<h1 id="h1_about">About Our Detection Model</h1>
+	<!--				<br>-->
+	<!--				<br>-->
+	<!--				<br>-->
+	<!--				<br>-->
+					<h3>딥러닝 접근 방식</h3>
+					<br>
+					<p>우리 팀에서 사용한 모델은 한국어 워드 임베딩에 최적화된 fasttext 100차원 모델을 이용하여 임베딩 되었습니다.</p>
+					<p>이 임베딩 벡터를 이용하여 제목과 본문 텍스트에 양방향 LSTM을 적용하여 효과적인 학습을 진행합니다.</p>
+					<p>결과로는 agree / disagree 두 가지 label로 나뉘어 출력됩니다. 각 파라미터는 여러번 실험 후 제일 성능이 좋은 파라미터로 선택되었습니다.</p>
+					<div >
+						<img src="{{ url_for('static', filename='images/model.png') }}" alt="My Image">
+					</div>
 
-				<br>
-				<br>
-				<h3>Attention Mechanism</h3>
-				<br>
-				<p>attention 기반 LSTM 신경망은 각 시퀀스의 은닉층 출력의 중요도인 가중치를 각 은닉층 출력에 가중합을 계산하여 attention 벡터를 구한다.</p>
-				<p>메인 페이지에서 attention vector에 대한 가중치 score를 이용하여 text를 시각화하여 나타냈습니다. </p>
-				<p>글자의 배경색이 선명할수록 attention score가 높은 단어입니다. attention score가 높다는 것은 fake news를 판별하는데 있어서 더 중요했다는 뜻입니다.</p>
-			</header>
+					<br>
+					<br>
+					<h3>Attention Mechanism</h3>
+					<br>
+					<p>attention 기반 LSTM 신경망은 각 시퀀스의 은닉층 출력의 중요도인 가중치를 각 은닉층 출력에 가중합을 계산하여 attention 벡터를 구한다.</p>
+					<p>메인 페이지에서 attention vector에 대한 가중치 score를 이용하여 text를 시각화하여 나타냈습니다. </p>
+					<p>글자의 배경색이 선명할수록 attention score가 높은 단어입니다. attention score가 높다는 것은 fake news를 판별하는데 있어서 더 중요했다는 뜻입니다.</p>
+				</header>
 
 
-		<!-- Footer -->
-<!--			<footer id="footer">-->
-<!--				<ul class="icons">-->
-<!--					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
-<!--					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
-<!--					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>-->
-<!--					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>-->
-<!--				</ul>-->
-<!--				<ul class="copyright">-->
-<!--					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>-->
-<!--				</ul>-->
-<!--			</footer>-->
+			<!-- Footer -->
+	<!--			<footer id="footer">-->
+	<!--				<ul class="icons">-->
+	<!--					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
+	<!--					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
+	<!--					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>-->
+	<!--					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>-->
+	<!--				</ul>-->
+	<!--				<ul class="copyright">-->
+	<!--					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>-->
+	<!--				</ul>-->
+	<!--			</footer>-->
 
-		<!-- Scripts -->
-			<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+			<!-- Scripts -->
+				<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
-	</body>
-	
+		</body>
+	</div>
 </html>
