--- a/static/css/main.css
+++ b/static/css/main.css
@@ -914,7 +914,8 @@ button,
         line-height: inherit;
         margin-top: 0;
         position: absolute; } }
-        
+
+/* contactus-form */
 
 
 /* Footer */
