--- a/static/css/other.css
+++ b/static/css/other.css
@@ -75,6 +75,7 @@ table.type06 .even {
 /*  height: 100vh;*/
 /*  width: 100vw;*/
 /*}*/
+
 img {
  width : 40%;
  height: 70%;
@@ -969,6 +970,68 @@ button,
         line-height: inherit;
         margin-top: 0;
         position: absolute; } }
+
+
+/* contactus-form */
+
+.contactus-form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr 3fr);
+  grid-template-rows: 20vh 20vh;
+  grid-gap: 20px;
+  gap: 20px;
+  width: 80vw;}
+
+
+.prof_img {
+  width : 100%;
+  height: 100%;
+  object-position: top;
+  object-fit: cover;
+}
+
+
+#img1 {
+  grid-column: 1;
+  grid-row: 1;}
+#img2 {
+  grid-column: 3;
+  grid-row: 1;}
+#img3 {
+  grid-column: 1;
+  grid-row: 2;}
+#img4 {
+  grid-column: 3;
+  grid-row: 2;}
+
+#info1 {
+  grid-column: 2;
+  grid-row: 1;}
+#info2 {
+  grid-column: 4;
+  grid-row: 1;}
+#info3 {
+  grid-column: 2;
+  grid-row: 2;}
+#info4 {
+  grid-column: 4;
+  grid-row: 2;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
