--- a/templates/contact.html
+++ b/templates/contact.html
@@ -106,10 +106,10 @@
 
 			</ul>
 		</nav>
-
+		<div style="padding: 0px 0px 0px 100px;">
 		<!-- Header -->
 			<header id="header">
-				<h1>This is contact us page~</h1>
+				<h1>Contact us</h1>
 				<p>　</p>
 			</header>
 
@@ -150,8 +150,7 @@
 
 				<p>　</p>
 			</contactus>
-
-
+		
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
@@ -164,6 +163,7 @@
 					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
+		</div>
 
 		<!-- Scripts -->
 			<script src="{{ url_for('static', filename='js/main.js') }}"></script>
